# slot_machine

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
assets/: fragment_shader.glsl  vertex_shader.glsl
src/: Color.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SlotMachine.cpp  SlotMachine.h  main.cpp
